--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Jokes</title>
-    <meta name="description" content="">
+    <meta name="description" content="Sometimes people laugh at a joke, but you don't know why, this application helps you know why.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for 'head'}}
-
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/jokes.css">
 
@@ -18,6 +20,7 @@
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
+
     <script src="assets/jokes.js"></script>
 
     {{content-for 'body-footer'}}
